[package]
name = "tilings"
version = "0.1.0"
authors = ["Abbath <pitongogi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rayon = "*"
image = "*"
imageproc = "*"
actix-web = { version = "3" }
serde = "*"
serde_json = "*"
progressing = "*"
clap = { version = "4.2.7", features = ["derive"] }
