[package]
name = "tilings"
version = "0.2.0"
authors = ["Abbath <pitongogi@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rayon = "*"
image = "*"
imageproc = "*"
actix-web = { version = "4" }
actix_extract_multipart = "*"
serde = { version = "*", features = ["derive"]}
serde_json = "*"
progressing = "*"
clap = { version = "4.2.7", features = ["derive"] }
